Added languages and flown points field and validations also

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,7 +28,7 @@
 
 @font-face {
   font-family: "poppins";
-  src: url("../fonts/Poppins-Semibold.woff2");
+  src: url("../fonts/Poppins-SemiBold.woff2");
   font-weight: 600;
 }
 
